fix: make hamburger nav visibile again

--- a/_sass/2-layouts/_hamburger-nav.scss
+++ b/_sass/2-layouts/_hamburger-nav.scss
@@ -1,6 +1,6 @@
 .menu-btn{
-   display: none;
-   @include mq-Tablet{
+   // display: none;
+   // @include mq-Tablet{
    display: block;;
    position: absolute;
    z-index: 3;
@@ -38,4 +38,4 @@
       }
    }
  } 
-}
+// }
